feat: Complete client-side features, PDF reports, and server fixes
This commit delivers a comprehensive set of features for the Church Management
System client, including full dashboard functionalities for both Admin and
User roles, PDF reporting, search capabilities, and critical server-side
enhancements and fixes that were identified during development.

Key Features & Fixes:

1.  **Core Infrastructure & Login:**
    *   Robust `UserSession` managing `username`, `role`, and `accountId`.
    *   `LoginForm` with simulated OTP flow, populating `UserSession`.
        Structural issues for NetBeans GUI builder compatibility addressed.
        Java 9+ `List.of` calls replaced for broader compatibility.
    *   `AdminDashboard` and `UserDashboard` shells with `CardLayout`
        navigation and functional logout.

2.  **Server-Side Enhancements:**
    *   **Donations Module:** Full server-side stack (JPA Model, Hibernate
        DAO, RMI Service Interface & Implementation) for Donations created.
        This includes RMI registration and necessary updates to `MemberDao`.
    *   **DAO Query Modernization:** Corrected Hibernate query usage in
        `DonationDao` and `MemberDao` to employ modern typed queries
        (`org.hibernate.query.Query`), enhancing type safety and resolving
        potential runtime errors.
    *   **MemberService Fixes:** Addressed critical issues in `MemberImpl`
        (DAO initialization, `getMemberById` implementation) and updated
        the `MemberService` interface and implementation to include
        `searchMembersByName` for consistency and functionality.

3.  **Admin Dashboard:**
    *   `EventsPanel`: Full CRUD operations, RMI connected. PDF export added.
    *   `MembersPanel`: Full CRUD operations, RMI connected, search by name.
        PDF export added.
    *   `AttendancePanel`: View attendance records, RMI connected (data loading
        refactored for UI responsiveness). PDF export added.
    *   `DonationsPanel`: View donati